--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,20 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
+    "@reduxjs/toolkit": "^2.8.2",
+    "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.3",
+    "tailwindcss": "^4.1.11",
     "zod": "^4.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@types/node": "^24.0.13",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react-swc": "^3.10.2",
